<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_listings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_listings" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_login" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_suggest"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_suggest" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_report" />
            <!--<item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_terms" /> -->
        </menu>
    </item>



</menu>
