<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listings">

    <fragment
        android:id="@+id/nav_listings"
        android:name="com.example.myapplication.ui.listings.ListingsFragment"
        android:label="@string/menu_listings"
        tools:layout="@layout/fragment_listings" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.myapplication.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.myapplication.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_suggest"
        android:name="com.example.myapplication.ui.suggest.SuggestFragment"
        android:label="@string/menu_suggest"
        tools:layout="@layout/fragment_suggest" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.myapplication.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />
</navigation>