<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cover_photo"
        android:layout_width="414dp"
        android:layout_height="272dp"
        android:src="@drawable/abbey_road_2"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/band_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/artist_pro_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/artist_profile_picture"
        android:src="@drawable/temp_pro_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover_photo"

        />

    <TextView
        android:id="@+id/band_name"
        android:layout_width="255dp"
        android:layout_height="86dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="THIS IS A TEST BAND"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/artist_pro_pic"


        app:layout_constraintTop_toBottomOf="@id/cover_photo" />

    <TextView
        android:id="@+id/band_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="6"
        android:text="This is a test band biography. Preferably, it will be about three lines long. This ensures that the recycler view below is not obscured."
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/band_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/band_name"

        app:layout_constraintTop_toBottomOf="@id/band_name" />

    <ImageButton
        android:id="@+id/social1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/social1"
        android:src="@drawable/temp_social_icon"
        app:layout_constraintStart_toStartOf="@id/artist_pro_pic"
        app:layout_constraintTop_toBottomOf="@id/artist_pro_pic"
        android:layout_marginStart="10dp"

        />

    <ImageButton
        android:id="@+id/social2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/social2"
        android:src="@drawable/temp_social_icon"

        app:layout_constraintLeft_toRightOf="@id/social1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist_pro_pic"

        />

    <ImageButton
        android:id="@+id/media1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/media1"
        android:src="@drawable/temp_streaming_pic"
        app:layout_constraintStart_toStartOf="@id/artist_pro_pic"
        app:layout_constraintTop_toBottomOf="@id/social1"
        android:layout_marginStart="10dp"

        />

    <ImageButton
        android:id="@+id/media2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/media2"
        android:src="@drawable/temp_streaming_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toRightOf="@id/media1"
        app:layout_constraintTop_toBottomOf="@id/social2"

        />

    <CheckBox
        android:id="@+id/favorite_button"
        style="?android:attr/starStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/favorite_button_filled"
        android:clickable="true"
        android:contentDescription="@string/favorite_button_card"
        android:focusable="true"
        android:src="@drawable/favorites_icon"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media1"
        app:layout_constraintBottom_toTopOf="@id/artist_shows"/>

    <TextView
        android:id="@+id/favorite_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favorite"
        app:layout_constraintBottom_toTopOf="@id/artist_shows"
        app:layout_constraintEnd_toStartOf="@+id/band_bio"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toEndOf="@+id/favorite_button"
        app:layout_constraintTop_toBottomOf="@id/media1"
        app:layout_constraintVertical_bias="0.615" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artist_shows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/media2" />


</androidx.constraintlayout.widget.ConstraintLayout>